crates/vite_task_bin/tests/e2e_snapshots/fixtures/stdio-detection/snapshots/multiple tasks, cache hit.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run -r check-tty-cached
~/packages/other$ check-tty
stdin:not-tty
stdout:not-tty
stderr:not-tty

$ check-tty
stdin:not-tty
stdout:not-tty
stderr:not-tty

---
[vp run] 0/2 cache hit (0%). (Run `vp run --verbose` for full details)
> vp run -r check-tty-cached
~/packages/other$ check-tty ✓ cache hit, replaying
stdin:not-tty
stdout:not-tty
stderr:not-tty

$ check-tty ✓ cache hit, replaying
stdin:not-tty
stdout:not-tty
stderr:not-tty

---
[vp run] 2/2 cache hit (100%), <duration> saved. (Run `vp run --verbose` for full details)
