crates/vite_task_bin/tests/e2e_snapshots/fixtures/stdio-detection/snapshots/single task, cache disabled.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run check-tty
$ check-tty ⊘ cache disabled: no cache config
stdin:tty
stdout:tty
stderr:tty
