crates/vite_task_bin/tests/e2e_snapshots/fixtures/stdio-detection/snapshots/single task, cache hit.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run check-tty-cached
$ check-tty
stdin:not-tty
stdout:not-tty
stderr:not-tty
> vp run check-tty-cached
$ check-tty ✓ cache hit, replaying
stdin:not-tty
stdout:not-tty
stderr:not-tty

---
vp run: cache hit, <duration> saved.
