crates/vite_task_bin/tests/e2e_snapshots/fixtures/stdio-detection/snapshots/single task, cache miss.snap
---
source: crates/vite_task_bin/tests/e2e_snapshots/main.rs
expression: e2e_outputs
---
> vp run check-tty-cached
$ check-tty
stdin:not-tty
stdout:not-tty
stderr:not-tty
